Fixed spacing between the GEO labels and the zoom-pan control.

--- a/css/custom/custom.css
+++ b/css/custom/custom.css
@@ -521,3 +521,18 @@ div.dataset-details-data {
 }
 
 /*******************************  Zoom and Pan buttons  *******************************/
+
+/*******************************  Spinner  *******************************/
+.spinner {
+  width: 100px;
+  height: 100px;
+  background-image: url('../img/spinner.gif');
+  background-position: center;
+  background-repeat: no-repeat;  
+  margin-right: auto;
+  margin-left: auto;
+  margin-top: 80px;
+  text-align: center;
+  position: absolute;
+  top: 100px;
+}
